logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T082108.185013+0000/task_id=create_postgres_table/attempt=2.log
[2023-09-02T08:22:48.485+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509
[2023-09-02T08:22:48.486+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table'
[2023-09-02T08:22:48.518+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509
[2023-09-02T08:22:48.520+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table'
[2023-09-02T08:22:48.560+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table manual__2023-09-02T08:21:08.185013+00:00 [queued]>
[2023-09-02T08:22:48.571+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table manual__2023-09-02T08:21:08.185013+00:00 [queued]>
[2023-09-02T08:22:48.572+0000] {taskinstance.py:1361} INFO - Starting attempt 2 of 7
[2023-09-02T08:22:48.589+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-09-02 08:21:08.185013+00:00
[2023-09-02T08:22:48.594+0000] {standard_task_runner.py:57} INFO - Started process 795 to run task
[2023-09-02T08:22:48.597+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v01', 'create_postgres_table', 'manual__2023-09-02T08:21:08.185013+00:00', '--job-id', '42', '--raw', '--subdir', 'DAGS_FOLDER/dag-postgres-operator.py', '--cfg-path', '/tmp/tmp24gs2f_v']
[2023-09-02T08:22:48.599+0000] {standard_task_runner.py:85} INFO - Job 42: Subtask create_postgres_table
[2023-09-02T08:22:48.652+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509
[2023-09-02T08:22:48.653+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table'
[2023-09-02T08:22:48.656+0000] {task_command.py:415} INFO - Running <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table manual__2023-09-02T08:21:08.185013+00:00 [running]> on host 6c82fec646db
[2023-09-02T08:22:48.735+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='qpsss' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v01' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-09-02T08:21:08.185013+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-02T08:21:08.185013+00:00'
[2023-09-02T08:22:48.739+0000] {sql.py:274} INFO - Executing: 
            create table if not exist dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, datg_ig)
            )
        
[2023-09-02T08:22:48.749+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-09-02T08:22:48.760+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-09-02T08:22:48.765+0000] {sql.py:418} INFO - Running statement: 
            create table if not exist dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, datg_ig)
            )
        , parameters: None
[2023-09-02T08:22:48.767+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exist"
LINE 2:             create table if not exist dag_runs (
                                        ^

[2023-09-02T08:22:48.779+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v01, task_id=create_postgres_table, execution_date=20230902T082108, start_date=20230902T082248, end_date=20230902T082248
[2023-09-02T08:22:48.799+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 42 for task create_postgres_table (syntax error at or near "exist"
LINE 2:             create table if not exist dag_runs (
                                        ^
; 795)
[2023-09-02T08:22:48.811+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-02T08:22:48.830+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
